--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,12 @@
 
 
 
-<!-- First Grid 
+<!-- 
 <div class="w3-row-padding w3-padding-64  w3-light-grey"  w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h1></h1>
+      <h5 class="w3-padding-32"></h5>
 
       <p class="w3-text-grey">
 	 
@@ -24,7 +24,7 @@
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      
     </div>
   </div>
 </div> -->
@@ -32,7 +32,7 @@
 
 
 
-<!-- Second Grid 
+<!-- 
 <div class="w3-row-padding w3-light-grey" w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
@@ -41,7 +41,7 @@
 
     <div class="w3-twothird">
       <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h5 class="w3-padding-32"></5>
 
       <p class="w3-text-grey">
 	  		
@@ -51,18 +51,18 @@
 </div>
 
 <div class="w3-container w3-pale-green w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+    <h1 class="w3-margin w3-xlarge"></h1>
 </div>
 
 
 
 
-<!-- Footer 
+<!-- 
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
   <div class="w3-xlarge w3-padding-32">
    
  </div>
- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+ <p></p>
 </footer>
 -->
 
